feat: Add About section and footer with complete internationalization
- Add comprehensive About section with app info, version, developer details
- Add footer with copyright and description across all 13 languages
- Update all translation files with footer keys (footerDescription, copyrightText)
- Consolidate README.md and DEVELOPMENT.md into single comprehensive documentation
- Clean up git guidelines for external contributors
- Update version to 0.3.0 using centralized version management system

Features:
- About section with app description, version display, developer links
- Footer with app description and copyright in all supported languages
- Website and GitHub repository links with proper external navigation
- Professional documentation suitable for open-source contributors

Translation Updates:
- English, Spanish, French, German, Arabic, Persian, Italian
- Portuguese, Russian, Chinese, Japanese, Korean, Indonesian
- All languages include footer translations with consistent messaging

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -1,81 +1,123 @@
 {
-  "dashboard": "لوحة التحكم",
-  "accounts": "الحسابات",
-  "transactions": "المعاملات",
-  "settings": "الإعدادات",
-  "welcome": "مرحباً بك في LedgerWell",
-  "totalOwed": "إجمالي ما أدين به",
-  "totalOwedToMe": "إجمالي المديون لي",
-  "netBalance": "الرصيد الصافي",
-  "addAccount": "إضافة حساب",
-  "addTransaction": "إضافة معاملة",
-  "accountName": "اسم الحساب",
-  "description": "الوصف",
-  "personName": "اسم الشخص",
-  "personNamePlaceholder": "اسم الشخص أو الشركة",
-  "pleaseEnterPersonName": "يرجى إدخال اسم الشخص",
-  "transactionDescription": "وصف المعاملة",
-  "transactionDescriptionOptional": "تفاصيل إضافية (اختياري)",
-  "currency": "العملة",
-  "amount": "المبلغ",
-  "type": "النوع",
-  "debt": "أدين بالمال",
-  "credit": "شخص يديني",
-  "save": "حفظ",
-  "cancel": "إلغاء",
-  "edit": "تعديل",
-  "delete": "حذف",
-  "confirm": "تأكيد",
-  "confirmDelete": "هل أنت متأكد من حذف هذا العنصر؟",
-  "language": "اللغة",
-  "theme": "السمة",
-  "defaultCurrency": "العملة الافتراضية",
-  "autoUpdateRates": "تحديث أسعار الصرف تلقائياً",
-  "darkMode": "الوضع المظلم",
-  "customCurrency": "عملة مخصصة",
-  "currencyCode": "رمز العملة",
-  "currencyName": "اسم العملة",
-  "currencySymbol": "رمز العملة",
-  "exchangeRate": "سعر الصرف (إلى الدولار)",
-  "manualRate": "تعيين سعر يدوي",
-  "updateRates": "تحديث أسعار الصرف",
-  "lastUpdated": "آخر تحديث",
-  "noAccounts": "لم يتم العثور على حسابات. أضف حسابك الأول!",
-  "noTransactions": "لم يتم العثور على معاملات.",
-  "searchPlaceholder": "بحث...",
-  "filterBy": "تصفية حسب",
-  "sortBy": "ترتيب حسب",
-  "date": "التاريخ",
-  "name": "الاسم",
-  "balance": "الرصيد",
-  "recent": "الأحدث",
-  "oldest": "الأقدم",
-  "recentAccounts": "الحسابات الحديثة",
-  "noDescription": "لا يوجد وصف",
-  "net": "صافي",
-  "exchangeRates": "أسعار الصرف",
-  "dataManagement": "إدارة البيانات",
-  "resetAllData": "إعادة تعيين جميع البيانات",
-  "updating": "جاري التحديث...",
-  "fetchingRates": "جلب أحدث أسعار الصرف",
-  "ratesUpdated": "تم تحديث أسعار الصرف بنجاح",
-  "updateFailed": "فشل في تحديث أسعار الصرف",
-  "resetConfirm": "سيؤدي هذا إلى حذف جميع الحسابات والمعاملات والإعدادات بشكل دائم. لا يمكن التراجع عن هذا الإجراء.",
-  "allDataReset": "تم إعادة تعيين جميع البيانات",
-  "resetFailed": "فشل في إعادة تعيين البيانات",
-  "enterAccountName": "أدخل اسم الحساب",
-  "optionalDescription": "وصف اختياري",
-  "createCustomCurrency": "إنشاء عملة مخصصة من خلال تقديم رمز العملة والاسم والرمز وسعر الصرف إلى الدولار الأمريكي.",
-  "currencyCodeHelper": "رمز العملة المكون من 3 أحرف",
-  "bitcoinExample": "مثل Bitcoin، Ethereum",
-  "symbolExample": "مثل ₿، Ξ، ₹",
-  "rateExample": "مثل 45000.00",
-  "rateHelper": "كم يساوي 1 دولار أمريكي بعملتك",
-  "exampleTitle": "مثال:",
-  "exampleText": "الرمز: BTC\nالاسم: Bitcoin\nالرمز: ₿\nالسعر: 0.000025 (إذا كان 1 دولار = 0.000025 بيتكوين)",
-  "languageChanged": "تم تغيير اللغة",
-  "restartRequired": "يرجى إعادة تشغيل التطبيق لتطبيق تغييرات التخطيط للغة الجديدة.",
-  "manageCustomCurrencies": "إدارة العملات المخصصة",
-  "createCustomCurrencyButton": "إنشاء عملة مخصصة",
-  "customCurrencyDeleted": "تم حذف العملة المخصصة بنجاح"
+  "dashboard": "Dashboard",
+  "accounts": "Accounts",
+  "transactions": "Transactions",
+  "settings": "Settings",
+  "welcome": "Welcome to LedgerWell",
+  "totalOwed": "Total I Owe",
+  "totalOwedToMe": "Total Owed to Me",
+  "netBalance": "Net Balance",
+  "addAccount": "Add Account",
+  "addTransaction": "Add Transaction",
+  "accountName": "Account Name",
+  "description": "Description",
+  "currency": "Currency",
+  "amount": "Amount",
+  "type": "Type",
+  "debt": "I Owe Money",
+  "credit": "Someone Owes Me",
+  "save": "Save",
+  "cancel": "Cancel",
+  "edit": "Edit",
+  "delete": "Delete",
+  "confirm": "Confirm",
+  "confirmDelete": "Are you sure you want to delete this item?",
+  "language": "Language",
+  "theme": "Theme",
+  "defaultCurrency": "Default Currency",
+  "autoUpdateRates": "Auto Update Exchange Rates",
+  "darkMode": "Dark Mode",
+  "customCurrency": "Custom Currency",
+  "currencyCode": "Currency Code",
+  "currencyName": "Currency Name",
+  "currencySymbol": "Currency Symbol",
+  "exchangeRate": "Exchange Rate (to USD)",
+  "manualRate": "Set Manual Rate",
+  "updateRates": "Update Exchange Rates",
+  "lastUpdated": "Last Updated",
+  "noAccounts": "No accounts found. Add your first account!",
+  "noTransactions": "No transactions found.",
+  "searchPlaceholder": "Search...",
+  "filterBy": "Filter By",
+  "sortBy": "Sort By",
+  "date": "Date",
+  "name": "Name",
+  "balance": "Balance",
+  "recent": "Recent",
+  "oldest": "Oldest",
+  "recentAccounts": "Recent Accounts",
+  "noDescription": "No description",
+  "net": "Net",
+  "exchangeRates": "Exchange Rates",
+  "dataManagement": "Data Management",
+  "resetAllData": "Reset All Data",
+  "updating": "Updating...",
+  "fetchingRates": "Fetching latest exchange rates",
+  "ratesUpdated": "Exchange rates updated successfully",
+  "updateFailed": "Failed to update exchange rates",
+  "resetConfirm": "This will permanently delete all accounts, transactions, and settings. This action cannot be undone.",
+  "allDataReset": "All data has been reset",
+  "resetFailed": "Failed to reset data",
+  "success": "Success",
+  "enterAccountName": "Enter account name",
+  "optionalDescription": "Optional description",
+  "createCustomCurrency": "Create a custom currency by providing the currency code, name, symbol, and exchange rate to USD.",
+  "currencyCodeHelper": "3 letter currency code",
+  "bitcoinExample": "e.g., Bitcoin, Ethereum",
+  "symbolExample": "e.g., ₿, Ξ, ₹",
+  "rateExample": "e.g., 45000.00",
+  "rateHelper": "How much 1 USD equals in your currency",
+  "exampleTitle": "Example:",
+  "exampleText": "Code: BTC\nName: Bitcoin\nSymbol: ₿\nRate: 0.000025 (if 1 USD = 0.000025 BTC)",
+  "languageChanged": "Language Changed",
+  "restartRequired": "Please restart the app to apply the layout changes for the new language.",
+  "error": "Error",
+  "pleaseEnterAccountName": "Please enter an account name",
+  "pleaseSelectCurrency": "Please select a currency",
+  "accountUpdated": "Account updated successfully",
+  "accountCreated": "Account created successfully",
+  "accountActionFailed": "Failed to {action} account",
+  "update": "update",
+  "create": "create",
+  "pleaseSelectAccount": "Please select an account",
+  "pleaseEnterDescription": "Please enter a description",
+  "pleaseEnterPersonName": "Please enter a person or company name",
+  "pleaseEnterValidAmount": "Please enter a valid amount",
+  "transactionUpdated": "Transaction updated successfully",
+  "transactionAdded": "Transaction added successfully",
+  "transactionActionFailed": "Failed to {action} transaction",
+  "amountPlaceholder": "0.00",
+  "transactionDescriptionPlaceholder": "What is this transaction for?",
+  "fillAllFields": "Please fill in all fields",
+  "currencyCodeInvalid": "Currency code must be exactly 3 letters (e.g., USD, EUR)",
+  "validExchangeRate": "Please enter a valid exchange rate",
+  "about": "About",
+  "appDescription": "Personal debt and credit tracking app",
+  "version": "Version",
+  "developer": "Developer",
+  "sourceCode": "Source Code",
+  "privacy": "الخصوصية",
+  "privacyDescription": "بياناتك تبقى على جهازك",
+  "footerDescription": "LedgerWell يساعدك في تتبع الديون والائتمان مع دعم متعدد العملات وخصوصية كاملة.",
+  "copyrightText": "© 2025 Sepehr Mohammady. مفتوح المصدر تحت رخصة MIT.",
+  "currencyExists": "Currency {code} already exists",
+  "customCurrencyAdded": "Custom currency {code} added successfully",
+  "customCurrencyFailed": "Failed to add custom currency",
+  "currencyCodePlaceholder": "e.g., BTC, ETH",
+  "currencyNamePlaceholder": "e.g., Bitcoin, Ethereum",
+  "personName": "Person/Company Name",
+  "personNamePlaceholder": "Who owes or is owed money?",
+  "transactionDescription": "Additional Notes",
+  "transactionDescriptionOptional": "Optional additional details",
+  "manageCustomCurrencies": "Manage Custom Currencies",
+  "createCustomCurrencyButton": "Create Custom Currency",
+  "customCurrencyDeleted": "Custom currency deleted successfully",
+  "account": "Account",
+  "confirmReset": "Are you sure you want to reset all data?",
+  "customCurrencyExample": "For example: Bitcoin (BTC)",
+  "noAccountsFound": "No accounts found",
+  "noTransactionsFound": "No transactions found",
+  "reset": "Reset",
+  "settingsSaveFailed": "Failed to save settings",
+  "totalBalance": "Total Balance"
 }
