--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -58,6 +58,7 @@
   "resetConfirm": "This will permanently delete all accounts, transactions, and settings. This action cannot be undone.",
   "allDataReset": "All data has been reset",
   "resetFailed": "Failed to reset data",
+  "success": "Success",
   "enterAccountName": "Enter account name",
   "optionalDescription": "Optional description",
   "createCustomCurrency": "Create a custom currency by providing the currency code, name, symbol, and exchange rate to USD.",
@@ -89,7 +90,16 @@
   "transactionDescriptionPlaceholder": "What is this transaction for?",
   "fillAllFields": "Please fill in all fields",
   "currencyCodeInvalid": "Currency code must be exactly 3 letters (e.g., USD, EUR)",
-  "validExchangeRate": "Please enter a valid exchange rate (positive number)",
+    "validExchangeRate": "Please enter a valid exchange rate",
+  "about": "About",
+  "appDescription": "Personal debt and credit tracking app",
+  "version": "Version",
+  "developer": "Developer",
+  "sourceCode": "Source Code",
+  "privacy": "Privacy",
+  "privacyDescription": "Your data stays on your device",
+  "footerDescription": "LedgerWell helps you track debts and credits with multi-currency support and complete privacy.",
+  "copyrightText": "© 2025 Sepehr Mohammady. Open source under MIT License.",
   "currencyExists": "Currency {code} already exists",
   "customCurrencyAdded": "Custom currency {code} added successfully",
   "customCurrencyFailed": "Failed to add custom currency",
@@ -101,5 +111,13 @@
   "transactionDescriptionOptional": "Optional additional details",
   "manageCustomCurrencies": "Manage Custom Currencies",
   "createCustomCurrencyButton": "Create Custom Currency",
-  "customCurrencyDeleted": "Custom currency deleted successfully"
+  "customCurrencyDeleted": "Custom currency deleted successfully",
+  "account": "Account",
+  "confirmReset": "Are you sure you want to reset all data?",
+  "customCurrencyExample": "For example: Bitcoin (BTC)",
+  "noAccountsFound": "No accounts found",
+  "noTransactionsFound": "No transactions found",
+  "reset": "Reset",
+  "settingsSaveFailed": "Failed to save settings",
+  "totalBalance": "Total Balance"
 }
