--- a/src/locales/fa.json
+++ b/src/locales/fa.json
@@ -69,5 +69,53 @@
   "restartRequired": "لطفاً برنامه را مجدداً راه‌اندازی کنید تا تغییرات طرح‌بندی برای زبان جدید اعمال شود.",
   "manageCustomCurrencies": "مدیریت ارزهای سفارشی",
   "createCustomCurrencyButton": "ایجاد ارز سفارشی",
-  "customCurrencyDeleted": "ارز سفارشی با موفقیت حذف شد"
+  "customCurrencyDeleted": "ارز سفارشی با موفقیت حذف شد",
+  "currencyExists": "ارز {code} از قبل وجود دارد",
+  "accountActionFailed": "خطا در {action} حساب",
+  "transactionActionFailed": "خطا در {action} تراکنش",
+  "error": "خطا",
+  "pleaseEnterAccountName": "لطفاً نام حساب را وارد کنید",
+  "pleaseSelectCurrency": "لطفاً ارز را انتخاب کنید",
+  "accountUpdated": "حساب با موفقیت به‌روزرسانی شد",
+  "accountCreated": "حساب با موفقیت ایجاد شد",
+  "update": "به‌روزرسانی",
+  "create": "ایجاد",
+  "customCurrencyAdded": "ارز سفارشی {code} با موفقیت اضافه شد",
+  "customCurrencyFailed": "خطا در افزودن ارز سفارشی",
+  "enterAccountName": "نام حساب را وارد کنید",
+  "optionalDescription": "توضیح اختیاری",
+  "amountPlaceholder": "0.00",
+  "bitcoinExample": "مثل Bitcoin، Ethereum",
+  "currencyCodeHelper": "کد ارز ۳ حرفی",
+  "currencyCodeInvalid": "کد ارز باید دقیقاً ۳ حرف باشد (مثل USD، EUR)",
+  "currencyCodePlaceholder": "مثل BTC، ETH",
+  "currencyNamePlaceholder": "مثل Bitcoin، Ethereum",
+  "exampleText": "کد: BTC\nنام: Bitcoin\nنماد: ₿\nنرخ: 0.000025 (اگر 1 USD = 0.000025 BTC)",
+  "exampleTitle": "مثال:",
+  "fillAllFields": "لطفاً همه فیلدها را پر کنید",
+  "filterBy": "فیلتر بر اساس",
+  "name": "نام",
+  "net": "خالص",
+  "noAccounts": "هیچ حسابی یافت نشد. اولین حساب خود را اضافه کنید!",
+  "noTransactions": "هیچ تراکنشی یافت نشد.",
+  "oldest": "قدیمی‌ترین",
+  "pleaseEnterDescription": "لطفاً توضیحی وارد کنید",
+  "pleaseEnterValidAmount": "لطفاً مقدار معتبری وارد کنید",
+  "pleaseSelectAccount": "لطفاً حسابی انتخاب کنید",
+  "rateExample": "مثل 45000.00",
+  "rateHelper": "۱ دلار آمریکا چقدر در ارز شما می‌ارزد",
+  "recent": "اخیر",
+  "sortBy": "مرتب‌سازی بر اساس",
+  "symbolExample": "مثل ₿، Ξ، ₹",
+  "transactionAdded": "تراکنش با موفقیت اضافه شد",
+  "transactionDescriptionPlaceholder": "این تراکنش برای چیست؟",
+  "transactionUpdated": "تراکنش با موفقیت به‌روزرسانی شد",
+  "validExchangeRate": "لطفاً نرخ ارز معتبری وارد کنید",
+  "about": "درباره",
+  "appDescription": "اپلیکیشن ردیابی بدهی و اعتبار شخصی",
+  "version": "نسخه",
+  "developer": "توسعه‌دهنده",
+  "sourceCode": "کد منبع",
+  "privacy": "حریم خصوصی",
+  "privacyDescription": "داده‌های شما روی دستگاه شما باقی می‌ماند"
 }
