--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -11,11 +11,11 @@
   "addTransaction": "Ajouter une Transaction",
   "accountName": "Nom du Compte",
   "description": "Description",
-  "personName": "Nom de Personne",
-  "personNamePlaceholder": "Nom de la personne ou entreprise",
-  "pleaseEnterPersonName": "Veuillez saisir le nom de la personne",
-  "transactionDescription": "Description de Transaction",
-  "transactionDescriptionOptional": "Détails supplémentaires (optionnel)",
+  "personName": "Nom de Personne/Entreprise",
+  "personNamePlaceholder": "Qui doit ou à qui on doit de l'argent?",
+  "pleaseEnterPersonName": "Veuillez saisir le nom d'une personne ou entreprise",
+  "transactionDescription": "Notes Supplémentaires",
+  "transactionDescriptionOptional": "Détails supplémentaires optionnels",
   "currency": "Devise",
   "amount": "Montant",
   "type": "Type",
@@ -71,5 +71,44 @@
   "restartRequired": "Veuillez redémarrer l'application pour appliquer les modifications de mise en page de la nouvelle langue.",
   "manageCustomCurrencies": "Gérer les Devises Personnalisées",
   "createCustomCurrencyButton": "Créer une Devise Personnalisée",
-  "customCurrencyDeleted": "Devise personnalisée supprimée avec succès"
+  "customCurrencyDeleted": "Devise personnalisée supprimée avec succès",
+  "net": "Net",
+  "enterAccountName": "Saisir le nom du compte",
+  "optionalDescription": "Description optionnelle",
+  "currencyCodeHelper": "Code de devise à 3 lettres",
+  "bitcoinExample": "par ex., Bitcoin, Ethereum",
+  "symbolExample": "par ex., ₿, Ξ, ₹",
+  "rateExample": "par ex., 45000.00",
+  "rateHelper": "Combien 1 USD équivaut dans votre devise",
+  "exampleTitle": "Exemple:",
+  "exampleText": "Code: BTC\\nNom: Bitcoin\\nSymbole: ₿\\nTaux: 0.000025 (si 1 USD = 0.000025 BTC)",
+  "error": "Erreur",
+  "pleaseEnterAccountName": "Veuillez saisir un nom de compte",
+  "pleaseSelectCurrency": "Veuillez sélectionner une devise",
+  "accountUpdated": "Compte mis à jour avec succès",
+  "accountCreated": "Compte créé avec succès",
+  "accountActionFailed": "Échec de {action} du compte",
+  "update": "mettre à jour",
+  "create": "créer",
+  "pleaseSelectAccount": "Veuillez sélectionner un compte",
+  "pleaseEnterDescription": "Veuillez saisir une description",
+  "pleaseEnterValidAmount": "Veuillez saisir un montant valide",
+  "transactionUpdated": "Transaction mise à jour avec succès",
+  "transactionAdded": "Transaction ajoutée avec succès",
+  "transactionActionFailed": "Échec de {action} de la transaction",
+  "amountPlaceholder": "0.00",
+  "transactionDescriptionPlaceholder": "À quoi sert cette transaction?",
+  "fillAllFields": "Veuillez remplir tous les champs",
+  "currencyCodeInvalid": "Le code de devise doit être exactement de 3 lettres (par ex., USD, EUR)",
+  "validExchangeRate": "Veuillez saisir un taux de change valide (nombre positif)",
+  "currencyExists": "La devise {code} existe déjà",
+  "customCurrencyAdded": "Devise personnalisée {code} ajoutée avec succès",
+  "customCurrencyFailed": "Échec de l'ajout de la devise personnalisée",
+  "currencyCodePlaceholder": "par ex., BTC, ETH",
+  "currencyNamePlaceholder": "par ex., Bitcoin, Ethereum",
+  "account": "Compte",
+  "confirmReset": "Êtes-vous sûr de vouloir réinitialiser toutes les données?",
+  "noAccountsFound": "Aucun compte trouvé",
+  "noTransactionsFound": "Aucune transaction trouvée",
+  "totalBalance": "Solde Total"
 }
