--- a/src/locales/id.json
+++ b/src/locales/id.json
@@ -1,80 +1,123 @@
 {
-  "dashboard": "Dasbor",
-  "accounts": "Akun",
-  "transactions": "Transaksi",
-  "settings": "Pengaturan",
-  "welcome": "Selamat datang di LedgerWell",
-  "totalOwed": "Total Hutang Saya",
-  "totalOwedToMe": "Total Piutang Saya",
-  "netBalance": "Saldo Bersih",
-  "addAccount": "Tambah Akun",
-  "addTransaction": "Tambah Transaksi",
-  "accountName": "Nama Akun",
-  "description": "Deskripsi",
-  "personName": "Nama Orang",
-  "personNamePlaceholder": "Nama orang atau perusahaan",
-  "pleaseEnterPersonName": "Silakan masukkan nama orang",
-  "transactionDescription": "Deskripsi Transaksi",
-  "transactionDescriptionOptional": "Detail tambahan (opsional)",
-  "currency": "Mata Uang",
-  "amount": "Jumlah",
-  "type": "Jenis",
-  "debt": "Saya Berhutang",
-  "credit": "Seseorang Berhutang kepada Saya",
-  "save": "Simpan",
-  "cancel": "Batal",
+  "dashboard": "Dashboard",
+  "accounts": "Accounts",
+  "transactions": "Transactions",
+  "settings": "Settings",
+  "welcome": "Welcome to LedgerWell",
+  "totalOwed": "Total I Owe",
+  "totalOwedToMe": "Total Owed to Me",
+  "netBalance": "Net Balance",
+  "addAccount": "Add Account",
+  "addTransaction": "Add Transaction",
+  "accountName": "Account Name",
+  "description": "Description",
+  "currency": "Currency",
+  "amount": "Amount",
+  "type": "Type",
+  "debt": "I Owe Money",
+  "credit": "Someone Owes Me",
+  "save": "Save",
+  "cancel": "Cancel",
   "edit": "Edit",
-  "delete": "Hapus",
-  "confirm": "Konfirmasi",
-  "confirmDelete": "Apakah Anda yakin ingin menghapus item ini?",
-  "language": "Bahasa",
-  "theme": "Tema",
-  "defaultCurrency": "Mata Uang Default",
-  "autoUpdateRates": "Perbarui Kurs Otomatis",
-  "darkMode": "Mode Gelap",
-  "customCurrency": "Mata Uang Kustom",
-  "currencyCode": "Kode Mata Uang",
-  "currencyName": "Nama Mata Uang",
-  "currencySymbol": "Simbol Mata Uang",
-  "exchangeRate": "Kurs Tukar (ke USD)",
-  "manualRate": "Atur Kurs Manual",
-  "updateRates": "Perbarui Kurs",
-  "lastUpdated": "Terakhir Diperbarui",
-  "noAccounts": "Tidak ada akun ditemukan. Tambahkan akun pertama Anda!",
-  "noTransactions": "Tidak ada transaksi ditemukan.",
-  "searchPlaceholder": "Cari...",
-  "filterBy": "Filter Berdasarkan",
-  "sortBy": "Urutkan Berdasarkan",
-  "date": "Tanggal",
-  "name": "Nama",
-  "balance": "Saldo",
-  "recent": "Terbaru",
-  "oldest": "Terlama",
-  "noAccountsFound": "Tidak ada akun ditemukan",
-  "noTransactionsFound": "Tidak ada transaksi ditemukan",
-  "totalBalance": "Total Saldo",
-  "account": "Akun",
-  "resetAllData": "Reset Semua Data",
-  "confirmReset": "Apakah Anda yakin? Tindakan ini akan menghapus semua data.",
-  "recentAccounts": "Akun Terbaru",
-  "noDescription": "Tidak ada deskripsi",
-  "exchangeRates": "Nilai Tukar",
-  "dataManagement": "Manajemen Data",
-  "createCustomCurrency": "Buat Mata Uang Kustom",
-  "customCurrencyExample": "Contoh: Bitcoin (BTC)",
-  "updating": "Memperbarui...",
-  "fetchingRates": "Mengambil nilai tukar terbaru",
-  "ratesUpdated": "Nilai tukar berhasil diperbarui",
-  "updateFailed": "Gagal memperbarui nilai tukar",
-  "settingsSaveFailed": "Gagal menyimpan pengaturan",
-  "resetConfirm": "Ini akan menghapus semua akun, transaksi, dan pengaturan secara permanen. Tindakan ini tidak dapat dibatalkan.",
-  "allDataReset": "Semua data telah direset",
-  "resetFailed": "Gagal mereset data",
-  "success": "Berhasil",
+  "delete": "Delete",
+  "confirm": "Confirm",
+  "confirmDelete": "Are you sure you want to delete this item?",
+  "language": "Language",
+  "theme": "Theme",
+  "defaultCurrency": "Default Currency",
+  "autoUpdateRates": "Auto Update Exchange Rates",
+  "darkMode": "Dark Mode",
+  "customCurrency": "Custom Currency",
+  "currencyCode": "Currency Code",
+  "currencyName": "Currency Name",
+  "currencySymbol": "Currency Symbol",
+  "exchangeRate": "Exchange Rate (to USD)",
+  "manualRate": "Set Manual Rate",
+  "updateRates": "Update Exchange Rates",
+  "lastUpdated": "Last Updated",
+  "noAccounts": "No accounts found. Add your first account!",
+  "noTransactions": "No transactions found.",
+  "searchPlaceholder": "Search...",
+  "filterBy": "Filter By",
+  "sortBy": "Sort By",
+  "date": "Date",
+  "name": "Name",
+  "balance": "Balance",
+  "recent": "Recent",
+  "oldest": "Oldest",
+  "recentAccounts": "Recent Accounts",
+  "noDescription": "No description",
+  "net": "Net",
+  "exchangeRates": "Exchange Rates",
+  "dataManagement": "Data Management",
+  "resetAllData": "Reset All Data",
+  "updating": "Updating...",
+  "fetchingRates": "Fetching latest exchange rates",
+  "ratesUpdated": "Exchange rates updated successfully",
+  "updateFailed": "Failed to update exchange rates",
+  "resetConfirm": "This will permanently delete all accounts, transactions, and settings. This action cannot be undone.",
+  "allDataReset": "All data has been reset",
+  "resetFailed": "Failed to reset data",
+  "success": "Success",
+  "enterAccountName": "Enter account name",
+  "optionalDescription": "Optional description",
+  "createCustomCurrency": "Create a custom currency by providing the currency code, name, symbol, and exchange rate to USD.",
+  "currencyCodeHelper": "3 letter currency code",
+  "bitcoinExample": "e.g., Bitcoin, Ethereum",
+  "symbolExample": "e.g., ₿, Ξ, ₹",
+  "rateExample": "e.g., 45000.00",
+  "rateHelper": "How much 1 USD equals in your currency",
+  "exampleTitle": "Example:",
+  "exampleText": "Code: BTC\nName: Bitcoin\nSymbol: ₿\nRate: 0.000025 (if 1 USD = 0.000025 BTC)",
+  "languageChanged": "Language Changed",
+  "restartRequired": "Please restart the app to apply the layout changes for the new language.",
+  "error": "Error",
+  "pleaseEnterAccountName": "Please enter an account name",
+  "pleaseSelectCurrency": "Please select a currency",
+  "accountUpdated": "Account updated successfully",
+  "accountCreated": "Account created successfully",
+  "accountActionFailed": "Failed to {action} account",
+  "update": "update",
+  "create": "create",
+  "pleaseSelectAccount": "Please select an account",
+  "pleaseEnterDescription": "Please enter a description",
+  "pleaseEnterPersonName": "Please enter a person or company name",
+  "pleaseEnterValidAmount": "Please enter a valid amount",
+  "transactionUpdated": "Transaction updated successfully",
+  "transactionAdded": "Transaction added successfully",
+  "transactionActionFailed": "Failed to {action} transaction",
+  "amountPlaceholder": "0.00",
+  "transactionDescriptionPlaceholder": "What is this transaction for?",
+  "fillAllFields": "Please fill in all fields",
+  "currencyCodeInvalid": "Currency code must be exactly 3 letters (e.g., USD, EUR)",
+  "validExchangeRate": "Please enter a valid exchange rate",
+  "about": "About",
+  "appDescription": "Personal debt and credit tracking app",
+  "version": "Version",
+  "developer": "Developer",
+  "sourceCode": "Source Code",
+  "privacy": "Privasi",
+  "privacyDescription": "Data Anda tetap di perangkat Anda",
+  "footerDescription": "LedgerWell membantu Anda melacak hutang dan kredit dengan dukungan multi-mata uang dan privasi lengkap.",
+  "copyrightText": "© 2025 Sepehr Mohammady. Sumber terbuka di bawah Lisensi MIT.",
+  "currencyExists": "Currency {code} already exists",
+  "customCurrencyAdded": "Custom currency {code} added successfully",
+  "customCurrencyFailed": "Failed to add custom currency",
+  "currencyCodePlaceholder": "e.g., BTC, ETH",
+  "currencyNamePlaceholder": "e.g., Bitcoin, Ethereum",
+  "personName": "Person/Company Name",
+  "personNamePlaceholder": "Who owes or is owed money?",
+  "transactionDescription": "Additional Notes",
+  "transactionDescriptionOptional": "Optional additional details",
+  "manageCustomCurrencies": "Manage Custom Currencies",
+  "createCustomCurrencyButton": "Create Custom Currency",
+  "customCurrencyDeleted": "Custom currency deleted successfully",
+  "account": "Account",
+  "confirmReset": "Are you sure you want to reset all data?",
+  "customCurrencyExample": "For example: Bitcoin (BTC)",
+  "noAccountsFound": "No accounts found",
+  "noTransactionsFound": "No transactions found",
   "reset": "Reset",
-  "languageChanged": "Bahasa Diubah",
-  "restartRequired": "Silakan restart aplikasi untuk menerapkan perubahan tata letak untuk bahasa baru.",
-  "manageCustomCurrencies": "Kelola Mata Uang Kustom",
-  "createCustomCurrencyButton": "Buat Mata Uang Kustom",
-  "customCurrencyDeleted": "Mata uang kustom berhasil dihapus"
+  "settingsSaveFailed": "Failed to save settings",
+  "totalBalance": "Total Balance"
 }
