--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -11,11 +11,11 @@
   "addTransaction": "Aggiungi transazione",
   "accountName": "Nome del conto",
   "description": "Descrizione",
-  "personName": "Nome Persona",
-  "personNamePlaceholder": "Nome della persona o azienda",
-  "pleaseEnterPersonName": "Si prega di inserire il nome della persona",
-  "transactionDescription": "Descrizione Transazione",
-  "transactionDescriptionOptional": "Dettagli aggiuntivi (opzionale)",
+  "personName": "Nome Persona/Azienda",
+  "personNamePlaceholder": "Chi deve o a chi è dovuto denaro?",
+  "pleaseEnterPersonName": "Inserire nome di persona o azienda",
+  "transactionDescription": "Note Aggiuntive",
+  "transactionDescriptionOptional": "Dettagli aggiuntivi opzionali",
   "currency": "Valuta",
   "amount": "Importo",
   "type": "Tipo",
@@ -76,5 +76,46 @@
   "restartRequired": "Si prega di riavviare l'app per applicare le modifiche di layout per la nuova lingua.",
   "manageCustomCurrencies": "Gestisci Valute Personalizzate",
   "createCustomCurrencyButton": "Crea Valuta Personalizzata",
-  "customCurrencyDeleted": "Valuta personalizzata eliminata con successo"
+  "customCurrencyDeleted": "Valuta personalizzata eliminata con successo",
+  "net": "Netto",
+  "enterAccountName": "Inserisci nome account",
+  "optionalDescription": "Descrizione opzionale",
+  "currencyCodeHelper": "Codice valuta di 3 lettere",
+  "bitcoinExample": "es., Bitcoin, Ethereum",
+  "symbolExample": "es., ₿, Ξ, ₹",
+  "rateExample": "es., 45000.00",
+  "rateHelper": "Quanto vale 1 USD nella tua valuta",
+  "exampleTitle": "Esempio:",
+  "exampleText": "Codice: BTC\\nNome: Bitcoin\\nSimbolo: ₿\\nTasso: 0.000025 (se 1 USD = 0.000025 BTC)",
+  "error": "Errore",
+  "pleaseEnterAccountName": "Inserire un nome account",
+  "pleaseSelectCurrency": "Selezionare una valuta",
+  "accountUpdated": "Account aggiornato con successo",
+  "accountCreated": "Account creato con successo",
+  "accountActionFailed": "Errore nel {action} account",
+  "update": "aggiornare",
+  "create": "creare",
+  "pleaseSelectAccount": "Selezionare un account",
+  "pleaseEnterDescription": "Inserire una descrizione",
+  "pleaseEnterValidAmount": "Inserire un importo valido",
+  "transactionUpdated": "Transazione aggiornata con successo",
+  "transactionAdded": "Transazione aggiunta con successo",
+  "transactionActionFailed": "Errore nel {action} transazione",
+  "amountPlaceholder": "0.00",
+  "transactionDescriptionPlaceholder": "A cosa serve questa transazione?",
+  "fillAllFields": "Compilare tutti i campi",
+  "currencyCodeInvalid": "Il codice valuta deve essere esattamente di 3 lettere (es., USD, EUR)",
+  "validExchangeRate": "Inserire un tasso di cambio valido (numero positivo)",
+  "currencyExists": "La valuta {code} esiste già",
+  "customCurrencyAdded": "Valuta personalizzata {code} aggiunta con successo",
+  "customCurrencyFailed": "Errore nell'aggiungere valuta personalizzata",
+  "currencyCodePlaceholder": "es., BTC, ETH",
+  "currencyNamePlaceholder": "es., Bitcoin, Ethereum",
+  "about": "Info",
+  "appDescription": "App per tracciamento debiti e crediti personali",
+  "version": "Versione",
+  "developer": "Sviluppatore",
+  "sourceCode": "Codice Sorgente",
+  "privacy": "Privacy",
+  "privacyDescription": "I tuoi dati rimangono sul tuo dispositivo"
 }
