--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -1,80 +1,123 @@
 {
-  "dashboard": "Painel",
-  "accounts": "Contas",
-  "transactions": "Transações",
-  "settings": "Configurações",
-  "welcome": "Bem-vindo ao LedgerWell",
-  "totalOwed": "Total que devo",
-  "totalOwedToMe": "Total que me devem",
-  "netBalance": "Saldo líquido",
-  "addAccount": "Adicionar conta",
-  "addTransaction": "Adicionar transação",
-  "accountName": "Nome da conta",
-  "description": "Descrição",
-  "personName": "Nome da Pessoa",
-  "personNamePlaceholder": "Nome da pessoa ou empresa",
-  "pleaseEnterPersonName": "Por favor, insira o nome da pessoa",
-  "transactionDescription": "Descrição da Transação",
-  "transactionDescriptionOptional": "Detalhes adicionais (opcional)",
-  "currency": "Moeda",
-  "amount": "Valor",
-  "type": "Tipo",
-  "debt": "Devo dinheiro",
-  "credit": "Alguém me deve",
-  "save": "Salvar",
-  "cancel": "Cancelar",
-  "edit": "Editar",
-  "delete": "Excluir",
-  "confirm": "Confirmar",
-  "confirmDelete": "Tem certeza de que deseja excluir este item?",
-  "language": "Idioma",
-  "theme": "Tema",
-  "defaultCurrency": "Moeda padrão",
-  "autoUpdateRates": "Atualizar taxas de câmbio automaticamente",
-  "darkMode": "Modo escuro",
-  "customCurrency": "Moeda personalizada",
-  "currencyCode": "Código da moeda",
-  "currencyName": "Nome da moeda",
-  "currencySymbol": "Símbolo da moeda",
-  "exchangeRate": "Taxa de câmbio (para USD)",
-  "manualRate": "Definir taxa manual",
-  "updateRates": "Atualizar taxas de câmbio",
-  "lastUpdated": "Última atualização",
-  "noAccounts": "Nenhuma conta encontrada. Adicione sua primeira conta!",
-  "noTransactions": "Nenhuma transação encontrada.",
-  "searchPlaceholder": "Pesquisar...",
-  "filterBy": "Filtrar por",
-  "sortBy": "Ordenar por",
-  "date": "Data",
-  "name": "Nome",
-  "balance": "Saldo",
-  "recent": "Recente",
-  "oldest": "Mais antigo",
-  "noAccountsFound": "Nenhuma conta encontrada",
-  "noTransactionsFound": "Nenhuma transação encontrada",
-  "totalBalance": "Saldo total",
-  "account": "Conta",
-  "resetAllData": "Redefinir todos os dados",
-  "confirmReset": "Tem certeza? Esta ação excluirá todos os dados.",
-  "recentAccounts": "Contas recentes",
-  "noDescription": "Nenhuma descrição",
-  "exchangeRates": "Taxas de câmbio",
-  "dataManagement": "Gerenciamento de dados",
-  "createCustomCurrency": "Criar moeda personalizada",
-  "customCurrencyExample": "Por exemplo: Bitcoin (BTC)",
-  "updating": "Atualizando...",
-  "fetchingRates": "Buscando as taxas de câmbio mais recentes",
-  "ratesUpdated": "Taxas de câmbio atualizadas com sucesso",
-  "updateFailed": "Falha ao atualizar as taxas de câmbio",
-  "settingsSaveFailed": "Falha ao salvar as configurações",
-  "resetConfirm": "Isso excluirá permanentemente todas as contas, transações e configurações. Esta ação não pode ser desfeita.",
-  "allDataReset": "Todos os dados foram redefinidos",
-  "resetFailed": "Falha ao redefinir os dados",
-  "success": "Sucesso",
-  "reset": "Redefinir",
-  "languageChanged": "Idioma Alterado",
-  "restartRequired": "Por favor, reinicie o aplicativo para aplicar as alterações de layout do novo idioma.",
-  "manageCustomCurrencies": "Gerenciar Moedas Personalizadas",
-  "createCustomCurrencyButton": "Criar Moeda Personalizada",
-  "customCurrencyDeleted": "Moeda personalizada excluída com sucesso"
+  "dashboard": "Dashboard",
+  "accounts": "Accounts",
+  "transactions": "Transactions",
+  "settings": "Settings",
+  "welcome": "Welcome to LedgerWell",
+  "totalOwed": "Total I Owe",
+  "totalOwedToMe": "Total Owed to Me",
+  "netBalance": "Net Balance",
+  "addAccount": "Add Account",
+  "addTransaction": "Add Transaction",
+  "accountName": "Account Name",
+  "description": "Description",
+  "currency": "Currency",
+  "amount": "Amount",
+  "type": "Type",
+  "debt": "I Owe Money",
+  "credit": "Someone Owes Me",
+  "save": "Save",
+  "cancel": "Cancel",
+  "edit": "Edit",
+  "delete": "Delete",
+  "confirm": "Confirm",
+  "confirmDelete": "Are you sure you want to delete this item?",
+  "language": "Language",
+  "theme": "Theme",
+  "defaultCurrency": "Default Currency",
+  "autoUpdateRates": "Auto Update Exchange Rates",
+  "darkMode": "Dark Mode",
+  "customCurrency": "Custom Currency",
+  "currencyCode": "Currency Code",
+  "currencyName": "Currency Name",
+  "currencySymbol": "Currency Symbol",
+  "exchangeRate": "Exchange Rate (to USD)",
+  "manualRate": "Set Manual Rate",
+  "updateRates": "Update Exchange Rates",
+  "lastUpdated": "Last Updated",
+  "noAccounts": "No accounts found. Add your first account!",
+  "noTransactions": "No transactions found.",
+  "searchPlaceholder": "Search...",
+  "filterBy": "Filter By",
+  "sortBy": "Sort By",
+  "date": "Date",
+  "name": "Name",
+  "balance": "Balance",
+  "recent": "Recent",
+  "oldest": "Oldest",
+  "recentAccounts": "Recent Accounts",
+  "noDescription": "No description",
+  "net": "Net",
+  "exchangeRates": "Exchange Rates",
+  "dataManagement": "Data Management",
+  "resetAllData": "Reset All Data",
+  "updating": "Updating...",
+  "fetchingRates": "Fetching latest exchange rates",
+  "ratesUpdated": "Exchange rates updated successfully",
+  "updateFailed": "Failed to update exchange rates",
+  "resetConfirm": "This will permanently delete all accounts, transactions, and settings. This action cannot be undone.",
+  "allDataReset": "All data has been reset",
+  "resetFailed": "Failed to reset data",
+  "success": "Success",
+  "enterAccountName": "Enter account name",
+  "optionalDescription": "Optional description",
+  "createCustomCurrency": "Create a custom currency by providing the currency code, name, symbol, and exchange rate to USD.",
+  "currencyCodeHelper": "3 letter currency code",
+  "bitcoinExample": "e.g., Bitcoin, Ethereum",
+  "symbolExample": "e.g., ₿, Ξ, ₹",
+  "rateExample": "e.g., 45000.00",
+  "rateHelper": "How much 1 USD equals in your currency",
+  "exampleTitle": "Example:",
+  "exampleText": "Code: BTC\nName: Bitcoin\nSymbol: ₿\nRate: 0.000025 (if 1 USD = 0.000025 BTC)",
+  "languageChanged": "Language Changed",
+  "restartRequired": "Please restart the app to apply the layout changes for the new language.",
+  "error": "Error",
+  "pleaseEnterAccountName": "Please enter an account name",
+  "pleaseSelectCurrency": "Please select a currency",
+  "accountUpdated": "Account updated successfully",
+  "accountCreated": "Account created successfully",
+  "accountActionFailed": "Failed to {action} account",
+  "update": "update",
+  "create": "create",
+  "pleaseSelectAccount": "Please select an account",
+  "pleaseEnterDescription": "Please enter a description",
+  "pleaseEnterPersonName": "Please enter a person or company name",
+  "pleaseEnterValidAmount": "Please enter a valid amount",
+  "transactionUpdated": "Transaction updated successfully",
+  "transactionAdded": "Transaction added successfully",
+  "transactionActionFailed": "Failed to {action} transaction",
+  "amountPlaceholder": "0.00",
+  "transactionDescriptionPlaceholder": "What is this transaction for?",
+  "fillAllFields": "Please fill in all fields",
+  "currencyCodeInvalid": "Currency code must be exactly 3 letters (e.g., USD, EUR)",
+  "validExchangeRate": "Please enter a valid exchange rate",
+  "about": "About",
+  "appDescription": "Personal debt and credit tracking app",
+  "version": "Version",
+  "developer": "Developer",
+  "sourceCode": "Source Code",
+  "privacy": "Privacidade",
+  "privacyDescription": "Seus dados permanecem em seu dispositivo",
+  "footerDescription": "LedgerWell ajuda você a rastrear dívidas e créditos com suporte multi-moeda e privacidade completa.",
+  "copyrightText": "© 2025 Sepehr Mohammady. Código aberto sob Licença MIT.",
+  "currencyExists": "Currency {code} already exists",
+  "customCurrencyAdded": "Custom currency {code} added successfully",
+  "customCurrencyFailed": "Failed to add custom currency",
+  "currencyCodePlaceholder": "e.g., BTC, ETH",
+  "currencyNamePlaceholder": "e.g., Bitcoin, Ethereum",
+  "personName": "Person/Company Name",
+  "personNamePlaceholder": "Who owes or is owed money?",
+  "transactionDescription": "Additional Notes",
+  "transactionDescriptionOptional": "Optional additional details",
+  "manageCustomCurrencies": "Manage Custom Currencies",
+  "createCustomCurrencyButton": "Create Custom Currency",
+  "customCurrencyDeleted": "Custom currency deleted successfully",
+  "account": "Account",
+  "confirmReset": "Are you sure you want to reset all data?",
+  "customCurrencyExample": "For example: Bitcoin (BTC)",
+  "noAccountsFound": "No accounts found",
+  "noTransactionsFound": "No transactions found",
+  "reset": "Reset",
+  "settingsSaveFailed": "Failed to save settings",
+  "totalBalance": "Total Balance"
 }
