--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -1,75 +1,123 @@
 {
   "dashboard": "Dashboard",
-  "accounts": "Konten",
-  "transactions": "Transaktionen",
-  "settings": "Einstellungen",
-  "welcome": "Willkommen bei LedgerWell",
-  "totalOwed": "Gesamt Schuldig",
-  "totalOwedToMe": "Gesamt Mir Geschuldet",
-  "netBalance": "Nettosaldo",
-  "addAccount": "Konto Hinzufügen",
-  "addTransaction": "Transaktion Hinzufügen",
-  "accountName": "Kontoname",
-  "description": "Beschreibung",
-  "personName": "Personenname",
-  "personNamePlaceholder": "Name der Person oder Firma",
-  "pleaseEnterPersonName": "Bitte geben Sie den Namen der Person ein",
-  "transactionDescription": "Transaktionsbeschreibung",
-  "transactionDescriptionOptional": "Zusätzliche Details (optional)",
-  "currency": "Währung",
-  "amount": "Betrag",
-  "type": "Typ",
-  "debt": "Ich Schulde Geld",
-  "credit": "Jemand Schuldet Mir",
-  "save": "Speichern",
-  "cancel": "Abbrechen",
-  "edit": "Bearbeiten",
-  "delete": "Löschen",
-  "confirm": "Bestätigen",
-  "confirmDelete": "Sind Sie sicher, dass Sie diesen Artikel löschen möchten?",
-  "language": "Sprache",
-  "theme": "Thema",
-  "defaultCurrency": "Standardwährung",
-  "autoUpdateRates": "Wechselkurse Automatisch Aktualisieren",
-  "darkMode": "Dunkler Modus",
-  "customCurrency": "Benutzerdefinierte Währung",
-  "currencyCode": "Währungscode",
-  "currencyName": "Währungsname",
-  "currencySymbol": "Währungssymbol",
-  "exchangeRate": "Wechselkurs (zu USD)",
-  "manualRate": "Manuellen Kurs Festlegen",
-  "updateRates": "Wechselkurse Aktualisieren",
-  "lastUpdated": "Zuletzt Aktualisiert",
-  "noAccounts": "Keine Konten gefunden. Fügen Sie Ihr erstes Konto hinzu!",
-  "noTransactions": "Keine Transaktionen gefunden.",
-  "searchPlaceholder": "Suchen...",
-  "filterBy": "Filtern Nach",
-  "sortBy": "Sortieren Nach",
-  "date": "Datum",
+  "accounts": "Accounts",
+  "transactions": "Transactions",
+  "settings": "Settings",
+  "welcome": "Welcome to LedgerWell",
+  "totalOwed": "Total I Owe",
+  "totalOwedToMe": "Total Owed to Me",
+  "netBalance": "Net Balance",
+  "addAccount": "Add Account",
+  "addTransaction": "Add Transaction",
+  "accountName": "Account Name",
+  "description": "Description",
+  "currency": "Currency",
+  "amount": "Amount",
+  "type": "Type",
+  "debt": "I Owe Money",
+  "credit": "Someone Owes Me",
+  "save": "Save",
+  "cancel": "Cancel",
+  "edit": "Edit",
+  "delete": "Delete",
+  "confirm": "Confirm",
+  "confirmDelete": "Are you sure you want to delete this item?",
+  "language": "Language",
+  "theme": "Theme",
+  "defaultCurrency": "Default Currency",
+  "autoUpdateRates": "Auto Update Exchange Rates",
+  "darkMode": "Dark Mode",
+  "customCurrency": "Custom Currency",
+  "currencyCode": "Currency Code",
+  "currencyName": "Currency Name",
+  "currencySymbol": "Currency Symbol",
+  "exchangeRate": "Exchange Rate (to USD)",
+  "manualRate": "Set Manual Rate",
+  "updateRates": "Update Exchange Rates",
+  "lastUpdated": "Last Updated",
+  "noAccounts": "No accounts found. Add your first account!",
+  "noTransactions": "No transactions found.",
+  "searchPlaceholder": "Search...",
+  "filterBy": "Filter By",
+  "sortBy": "Sort By",
+  "date": "Date",
   "name": "Name",
-  "balance": "Saldo",
-  "recent": "Kürzlich",
-  "oldest": "Älteste",
-  "recentAccounts": "Kürzliche Konten",
-  "noDescription": "Keine Beschreibung",
-  "exchangeRates": "Wechselkurse",
-  "dataManagement": "Datenverwaltung",
-  "resetAllData": "Alle Daten zurücksetzen",
-  "createCustomCurrency": "Benutzerdefinierte Währung erstellen",
-  "customCurrencyExample": "Zum Beispiel: Bitcoin (BTC)",
-  "updating": "Aktualisierung...",
-  "fetchingRates": "Neueste Wechselkurse abrufen",
-  "ratesUpdated": "Wechselkurse erfolgreich aktualisiert",
-  "updateFailed": "Aktualisierung der Wechselkurse fehlgeschlagen",
-  "settingsSaveFailed": "Speichern der Einstellungen fehlgeschlagen",
-  "resetConfirm": "Dies wird alle Konten, Transaktionen und Einstellungen dauerhaft löschen. Diese Aktion kann nicht rückgängig gemacht werden.",
-  "allDataReset": "Alle Daten wurden zurückgesetzt",
-  "resetFailed": "Zurücksetzen der Daten fehlgeschlagen",
-  "success": "Erfolg",
-  "reset": "Zurücksetzen",
-  "languageChanged": "Sprache Geändert",
-  "restartRequired": "Bitte starten Sie die App neu, um die Layout-Änderungen für die neue Sprache anzuwenden.",
-  "manageCustomCurrencies": "Benutzerdefinierte Währungen Verwalten",
-  "createCustomCurrencyButton": "Benutzerdefinierte Währung Erstellen",
-  "customCurrencyDeleted": "Benutzerdefinierte Währung erfolgreich gelöscht"
+  "balance": "Balance",
+  "recent": "Recent",
+  "oldest": "Oldest",
+  "recentAccounts": "Recent Accounts",
+  "noDescription": "No description",
+  "net": "Net",
+  "exchangeRates": "Exchange Rates",
+  "dataManagement": "Data Management",
+  "resetAllData": "Reset All Data",
+  "updating": "Updating...",
+  "fetchingRates": "Fetching latest exchange rates",
+  "ratesUpdated": "Exchange rates updated successfully",
+  "updateFailed": "Failed to update exchange rates",
+  "resetConfirm": "This will permanently delete all accounts, transactions, and settings. This action cannot be undone.",
+  "allDataReset": "All data has been reset",
+  "resetFailed": "Failed to reset data",
+  "success": "Success",
+  "enterAccountName": "Enter account name",
+  "optionalDescription": "Optional description",
+  "createCustomCurrency": "Create a custom currency by providing the currency code, name, symbol, and exchange rate to USD.",
+  "currencyCodeHelper": "3 letter currency code",
+  "bitcoinExample": "e.g., Bitcoin, Ethereum",
+  "symbolExample": "e.g., ₿, Ξ, ₹",
+  "rateExample": "e.g., 45000.00",
+  "rateHelper": "How much 1 USD equals in your currency",
+  "exampleTitle": "Example:",
+  "exampleText": "Code: BTC\nName: Bitcoin\nSymbol: ₿\nRate: 0.000025 (if 1 USD = 0.000025 BTC)",
+  "languageChanged": "Language Changed",
+  "restartRequired": "Please restart the app to apply the layout changes for the new language.",
+  "error": "Error",
+  "pleaseEnterAccountName": "Please enter an account name",
+  "pleaseSelectCurrency": "Please select a currency",
+  "accountUpdated": "Account updated successfully",
+  "accountCreated": "Account created successfully",
+  "accountActionFailed": "Failed to {action} account",
+  "update": "update",
+  "create": "create",
+  "pleaseSelectAccount": "Please select an account",
+  "pleaseEnterDescription": "Please enter a description",
+  "pleaseEnterPersonName": "Please enter a person or company name",
+  "pleaseEnterValidAmount": "Please enter a valid amount",
+  "transactionUpdated": "Transaction updated successfully",
+  "transactionAdded": "Transaction added successfully",
+  "transactionActionFailed": "Failed to {action} transaction",
+  "amountPlaceholder": "0.00",
+  "transactionDescriptionPlaceholder": "What is this transaction for?",
+  "fillAllFields": "Please fill in all fields",
+  "currencyCodeInvalid": "Currency code must be exactly 3 letters (e.g., USD, EUR)",
+  "validExchangeRate": "Please enter a valid exchange rate",
+  "about": "About",
+  "appDescription": "Personal debt and credit tracking app",
+  "version": "Version",
+  "developer": "Developer",
+  "sourceCode": "Source Code",
+  "privacy": "Datenschutz",
+  "privacyDescription": "Ihre Daten bleiben auf Ihrem Gerät",
+  "footerDescription": "LedgerWell hilft Ihnen, Schulden und Kredite mit Mehrwährungsunterstützung und vollständiger Privatsphäre zu verfolgen.",
+  "copyrightText": "© 2025 Sepehr Mohammady. Open Source unter MIT-Lizenz.",
+  "currencyExists": "Currency {code} already exists",
+  "customCurrencyAdded": "Custom currency {code} added successfully",
+  "customCurrencyFailed": "Failed to add custom currency",
+  "currencyCodePlaceholder": "e.g., BTC, ETH",
+  "currencyNamePlaceholder": "e.g., Bitcoin, Ethereum",
+  "personName": "Person/Company Name",
+  "personNamePlaceholder": "Who owes or is owed money?",
+  "transactionDescription": "Additional Notes",
+  "transactionDescriptionOptional": "Optional additional details",
+  "manageCustomCurrencies": "Manage Custom Currencies",
+  "createCustomCurrencyButton": "Create Custom Currency",
+  "customCurrencyDeleted": "Custom currency deleted successfully",
+  "account": "Account",
+  "confirmReset": "Are you sure you want to reset all data?",
+  "customCurrencyExample": "For example: Bitcoin (BTC)",
+  "noAccountsFound": "No accounts found",
+  "noTransactionsFound": "No transactions found",
+  "reset": "Reset",
+  "settingsSaveFailed": "Failed to save settings",
+  "totalBalance": "Total Balance"
 }
