--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -1,102 +1,123 @@
 {
-  "dashboard": "Panel de Control",
-  "accounts": "Cuentas",
-  "transactions": "Transacciones",
-  "settings": "Configuración",
-  "welcome": "Bienvenido a LedgerWell",
-  "totalOwed": "Total que Debo",
-  "totalOwedToMe": "Total que me Deben",
-  "netBalance": "Balance Neto",
-  "addAccount": "Agregar Cuenta",
-  "addTransaction": "Agregar Transacción",
-  "accountName": "Nombre de la Cuenta",
-  "description": "Descripción",
-  "personName": "Nombre de Persona",
-  "personNamePlaceholder": "Nombre de la persona o empresa",
-  "pleaseEnterPersonName": "Por favor ingrese el nombre de la persona",
-  "transactionDescription": "Descripción de Transacción",
-  "transactionDescriptionOptional": "Detalles adicionales (opcional)",
-  "currency": "Moneda",
-  "amount": "Cantidad",
-  "type": "Tipo",
-  "debt": "Yo Debo Dinero",
-  "credit": "Alguien me Debe",
-  "save": "Guardar",
-  "cancel": "Cancelar",
-  "edit": "Editar",
-  "delete": "Eliminar",
-  "confirm": "Confirmar",
-  "confirmDelete": "¿Estás seguro de que quieres eliminar este elemento?",
-  "language": "Idioma",
-  "theme": "Tema",
-  "defaultCurrency": "Moneda Predeterminada",
-    "autoUpdateRates": "Actualización Automática de Tasas",
-  "darkMode": "Modo Oscuro",
-  "customCurrency": "Moneda Personalizada",
-  "currencyCode": "Código de Moneda",
-  "currencyName": "Nombre de Moneda",
-  "currencySymbol": "Símbolo de Moneda",
-  "exchangeRate": "Tasa de Cambio (a USD)",
-  "manualRate": "Establecer Tasa Manual",
-  "updateRates": "Actualizar Tasas de Cambio",
-  "lastUpdated": "Última Actualización",
-  "noAccounts": "No se encontraron cuentas. ¡Agrega tu primera cuenta!",
-  "noTransactions": "No se encontraron transacciones.",
-  "searchPlaceholder": "Buscar...",
-  "filterBy": "Filtrar Por",
-  "sortBy": "Ordenar Por",
-  "date": "Fecha",
-  "name": "Nombre",
+  "dashboard": "Dashboard",
+  "accounts": "Accounts",
+  "transactions": "Transactions",
+  "settings": "Settings",
+  "welcome": "Welcome to LedgerWell",
+  "totalOwed": "Total I Owe",
+  "totalOwedToMe": "Total Owed to Me",
+  "netBalance": "Net Balance",
+  "addAccount": "Add Account",
+  "addTransaction": "Add Transaction",
+  "accountName": "Account Name",
+  "description": "Description",
+  "currency": "Currency",
+  "amount": "Amount",
+  "type": "Type",
+  "debt": "I Owe Money",
+  "credit": "Someone Owes Me",
+  "save": "Save",
+  "cancel": "Cancel",
+  "edit": "Edit",
+  "delete": "Delete",
+  "confirm": "Confirm",
+  "confirmDelete": "Are you sure you want to delete this item?",
+  "language": "Language",
+  "theme": "Theme",
+  "defaultCurrency": "Default Currency",
+  "autoUpdateRates": "Auto Update Exchange Rates",
+  "darkMode": "Dark Mode",
+  "customCurrency": "Custom Currency",
+  "currencyCode": "Currency Code",
+  "currencyName": "Currency Name",
+  "currencySymbol": "Currency Symbol",
+  "exchangeRate": "Exchange Rate (to USD)",
+  "manualRate": "Set Manual Rate",
+  "updateRates": "Update Exchange Rates",
+  "lastUpdated": "Last Updated",
+  "noAccounts": "No accounts found. Add your first account!",
+  "noTransactions": "No transactions found.",
+  "searchPlaceholder": "Search...",
+  "filterBy": "Filter By",
+  "sortBy": "Sort By",
+  "date": "Date",
+  "name": "Name",
   "balance": "Balance",
-  "recent": "Reciente",
-  "oldest": "Más Antiguo",
-  "recentAccounts": "Cuentas Recientes",
-  "noDescription": "Sin descripción",
-  "net": "Neto",
-  "exchangeRates": "Tipos de Cambio",
-  "dataManagement": "Gestión de Datos",
-  "resetAllData": "Restablecer Todos los Datos",
-  "updating": "Actualizando...",
-  "fetchingRates": "Obteniendo últimos tipos de cambio",
-  "ratesUpdated": "Tipos de cambio actualizados correctamente",
-  "updateFailed": "Error al actualizar tipos de cambio",
-  "resetConfirm": "Esto eliminará permanentemente todas las cuentas, transacciones y configuraciones. Esta acción no se puede deshacer.",
-  "allDataReset": "Todos los datos han sido restablecidos",
-  "resetFailed": "Error al restablecer datos",
-  "enterAccountName": "Ingrese nombre de cuenta",
-  "optionalDescription": "Descripción opcional",
-  "createCustomCurrency": "Cree una moneda personalizada proporcionando el código de moneda, nombre, símbolo y tipo de cambio a USD.",
-  "currencyCodeHelper": "Código de moneda de 3 letras",
-  "bitcoinExample": "ej., Bitcoin, Ethereum",
-  "symbolExample": "ej., ₿, Ξ, ₹",
-  "rateExample": "ej., 45000.00",
-  "rateHelper": "Cuánto vale 1 USD en tu moneda",
-  "exampleTitle": "Ejemplo:",
-  "exampleText": "Código: BTC\nNombre: Bitcoin\nSímbolo: ₿\nTasa: 0.000025 (si 1 USD = 0.000025 BTC)",
+  "recent": "Recent",
+  "oldest": "Oldest",
+  "recentAccounts": "Recent Accounts",
+  "noDescription": "No description",
+  "net": "Net",
+  "exchangeRates": "Exchange Rates",
+  "dataManagement": "Data Management",
+  "resetAllData": "Reset All Data",
+  "updating": "Updating...",
+  "fetchingRates": "Fetching latest exchange rates",
+  "ratesUpdated": "Exchange rates updated successfully",
+  "updateFailed": "Failed to update exchange rates",
+  "resetConfirm": "This will permanently delete all accounts, transactions, and settings. This action cannot be undone.",
+  "allDataReset": "All data has been reset",
+  "resetFailed": "Failed to reset data",
+  "success": "Success",
+  "enterAccountName": "Enter account name",
+  "optionalDescription": "Optional description",
+  "createCustomCurrency": "Create a custom currency by providing the currency code, name, symbol, and exchange rate to USD.",
+  "currencyCodeHelper": "3 letter currency code",
+  "bitcoinExample": "e.g., Bitcoin, Ethereum",
+  "symbolExample": "e.g., ₿, Ξ, ₹",
+  "rateExample": "e.g., 45000.00",
+  "rateHelper": "How much 1 USD equals in your currency",
+  "exampleTitle": "Example:",
+  "exampleText": "Code: BTC\nName: Bitcoin\nSymbol: ₿\nRate: 0.000025 (if 1 USD = 0.000025 BTC)",
+  "languageChanged": "Language Changed",
+  "restartRequired": "Please restart the app to apply the layout changes for the new language.",
   "error": "Error",
-  "pleaseEnterAccountName": "Por favor ingrese un nombre de cuenta",
-  "pleaseSelectCurrency": "Por favor seleccione una moneda",
-  "accountUpdated": "Cuenta actualizada exitosamente",
-  "accountCreated": "Cuenta creada exitosamente",
-  "update": "actualizar",
-  "create": "crear",
-  "pleaseSelectAccount": "Por favor seleccione una cuenta",
-  "pleaseEnterDescription": "Por favor ingrese una descripción",
-  "pleaseEnterValidAmount": "Por favor ingrese una cantidad válida",
-  "transactionUpdated": "Transacción actualizada exitosamente",
-  "transactionAdded": "Transacción agregada exitosamente",
+  "pleaseEnterAccountName": "Please enter an account name",
+  "pleaseSelectCurrency": "Please select a currency",
+  "accountUpdated": "Account updated successfully",
+  "accountCreated": "Account created successfully",
+  "accountActionFailed": "Failed to {action} account",
+  "update": "update",
+  "create": "create",
+  "pleaseSelectAccount": "Please select an account",
+  "pleaseEnterDescription": "Please enter a description",
+  "pleaseEnterPersonName": "Please enter a person or company name",
+  "pleaseEnterValidAmount": "Please enter a valid amount",
+  "transactionUpdated": "Transaction updated successfully",
+  "transactionAdded": "Transaction added successfully",
+  "transactionActionFailed": "Failed to {action} transaction",
   "amountPlaceholder": "0.00",
-  "transactionDescriptionPlaceholder": "¿Para qué es esta transacción?",
-  "fillAllFields": "Por favor complete todos los campos",
-  "currencyCodeInvalid": "El código de moneda debe ser exactamente de 3 letras (ej., USD, EUR)",
-  "validExchangeRate": "Por favor ingrese una tasa de cambio válida (número positivo)",
-  "customCurrencyAdded": "Moneda personalizada {code} agregada exitosamente",
-  "customCurrencyFailed": "Error al agregar moneda personalizada",
-  "currencyCodePlaceholder": "ej., BTC, ETH",
-  "currencyNamePlaceholder": "ej., Bitcoin, Ethereum",
-  "languageChanged": "Idioma Cambiado",
-  "restartRequired": "Por favor reinicie la aplicación para aplicar los cambios de diseño del nuevo idioma.",
-  "manageCustomCurrencies": "Gestionar Monedas Personalizadas",
-  "createCustomCurrencyButton": "Crear Moneda Personalizada",
-  "customCurrencyDeleted": "Moneda personalizada eliminada exitosamente"
+  "transactionDescriptionPlaceholder": "What is this transaction for?",
+  "fillAllFields": "Please fill in all fields",
+  "currencyCodeInvalid": "Currency code must be exactly 3 letters (e.g., USD, EUR)",
+  "validExchangeRate": "Please enter a valid exchange rate",
+  "about": "About",
+  "appDescription": "Personal debt and credit tracking app",
+  "version": "Version",
+  "developer": "Developer",
+  "sourceCode": "Source Code",
+  "privacy": "Privacidad",
+  "privacyDescription": "Tus datos permanecen en tu dispositivo",
+  "footerDescription": "LedgerWell te ayuda a rastrear deudas y créditos con soporte multi-moneda y privacidad completa.",
+  "copyrightText": "© 2025 Sepehr Mohammady. Código abierto bajo Licencia MIT.",
+  "currencyExists": "Currency {code} already exists",
+  "customCurrencyAdded": "Custom currency {code} added successfully",
+  "customCurrencyFailed": "Failed to add custom currency",
+  "currencyCodePlaceholder": "e.g., BTC, ETH",
+  "currencyNamePlaceholder": "e.g., Bitcoin, Ethereum",
+  "personName": "Person/Company Name",
+  "personNamePlaceholder": "Who owes or is owed money?",
+  "transactionDescription": "Additional Notes",
+  "transactionDescriptionOptional": "Optional additional details",
+  "manageCustomCurrencies": "Manage Custom Currencies",
+  "createCustomCurrencyButton": "Create Custom Currency",
+  "customCurrencyDeleted": "Custom currency deleted successfully",
+  "account": "Account",
+  "confirmReset": "Are you sure you want to reset all data?",
+  "customCurrencyExample": "For example: Bitcoin (BTC)",
+  "noAccountsFound": "No accounts found",
+  "noTransactionsFound": "No transactions found",
+  "reset": "Reset",
+  "settingsSaveFailed": "Failed to save settings",
+  "totalBalance": "Total Balance"
 }
