--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -1,80 +1,123 @@
 {
-  "dashboard": "ダッシュボード",
-  "accounts": "アカウント",
-  "transactions": "取引",
-  "settings": "設定",
-  "welcome": "LedgerWellへようこそ",
-  "totalOwed": "私が借りている総額",
-  "totalOwedToMe": "私に借りている総額",
-  "netBalance": "純残高",
-  "addAccount": "アカウントを追加",
-  "addTransaction": "取引を追加",
-  "accountName": "アカウント名",
-  "description": "説明",
-  "personName": "人名",
-  "personNamePlaceholder": "人または会社の名前",
-  "pleaseEnterPersonName": "人の名前を入力してください",
-  "transactionDescription": "取引の説明",
-  "transactionDescriptionOptional": "追加の詳細（任意）",
-  "currency": "通貨",
-  "amount": "金額",
-  "type": "タイプ",
-  "debt": "私はお金を借りています",
-  "credit": "私にお金を借りている人がいます",
-  "save": "保存",
-  "cancel": "キャンセル",
-  "edit": "編集",
-  "delete": "削除",
-  "confirm": "確認",
-  "confirmDelete": "このアイテムを削除してもよろしいですか？",
-  "language": "言語",
-  "theme": "テーマ",
-  "defaultCurrency": "デフォルト通貨",
-  "autoUpdateRates": "為替レートを自動更新",
-  "darkMode": "ダークモード",
-  "customCurrency": "カスタム通貨",
-  "currencyCode": "通貨コード",
-  "currencyName": "通貨名",
-  "currencySymbol": "通貨記号",
-  "exchangeRate": "為替レート（米ドル換算）",
-  "manualRate": "手動レートを設定",
-  "updateRates": "為替レートを更新",
-  "lastUpdated": "最終更新",
-  "noAccounts": "アカウントが見つかりません。最初のアカウントを追加してください！",
-  "noTransactions": "取引が見つかりません。",
-  "searchPlaceholder": "検索...",
-  "filterBy": "フィルター",
-  "sortBy": "並び替え",
-  "date": "日付",
-  "name": "名前",
-  "balance": "残高",
-  "recent": "最新",
-  "oldest": "最古",
-  "noAccountsFound": "アカウントが見つかりません",
-  "noTransactionsFound": "取引が見つかりません",
-  "totalBalance": "総残高",
-  "account": "アカウント",
-  "resetAllData": "すべてのデータをリセット",
-  "confirmReset": "本当によろしいですか？この操作によりすべてのデータが削除されます。",
-  "recentAccounts": "最近のアカウント",
-  "noDescription": "説明なし",
-  "exchangeRates": "為替レート",
-  "dataManagement": "データ管理",
-  "createCustomCurrency": "カスタム通貨を作成",
-  "customCurrencyExample": "例：ビットコイン (BTC)",
-  "updating": "更新中...",
-  "fetchingRates": "最新の為替レートを取得中",
-  "ratesUpdated": "為替レートが正常に更新されました",
-  "updateFailed": "為替レートの更新に失敗しました",
-  "settingsSaveFailed": "設定の保存に失敗しました",
-  "resetConfirm": "すべてのアカウント、取引、設定が完全に削除されます。この操作は元に戻せません。",
-  "allDataReset": "すべてのデータがリセットされました",
-  "resetFailed": "データのリセットに失敗しました",
-  "success": "成功",
-  "reset": "リセット",
-  "languageChanged": "言語が変更されました",
-  "restartRequired": "新しい言語のレイアウト変更を適用するには、アプリを再起動してください。",
-  "manageCustomCurrencies": "カスタム通貨を管理",
-  "createCustomCurrencyButton": "カスタム通貨を作成",
-  "customCurrencyDeleted": "カスタム通貨が正常に削除されました"
+  "dashboard": "Dashboard",
+  "accounts": "Accounts",
+  "transactions": "Transactions",
+  "settings": "Settings",
+  "welcome": "Welcome to LedgerWell",
+  "totalOwed": "Total I Owe",
+  "totalOwedToMe": "Total Owed to Me",
+  "netBalance": "Net Balance",
+  "addAccount": "Add Account",
+  "addTransaction": "Add Transaction",
+  "accountName": "Account Name",
+  "description": "Description",
+  "currency": "Currency",
+  "amount": "Amount",
+  "type": "Type",
+  "debt": "I Owe Money",
+  "credit": "Someone Owes Me",
+  "save": "Save",
+  "cancel": "Cancel",
+  "edit": "Edit",
+  "delete": "Delete",
+  "confirm": "Confirm",
+  "confirmDelete": "Are you sure you want to delete this item?",
+  "language": "Language",
+  "theme": "Theme",
+  "defaultCurrency": "Default Currency",
+  "autoUpdateRates": "Auto Update Exchange Rates",
+  "darkMode": "Dark Mode",
+  "customCurrency": "Custom Currency",
+  "currencyCode": "Currency Code",
+  "currencyName": "Currency Name",
+  "currencySymbol": "Currency Symbol",
+  "exchangeRate": "Exchange Rate (to USD)",
+  "manualRate": "Set Manual Rate",
+  "updateRates": "Update Exchange Rates",
+  "lastUpdated": "Last Updated",
+  "noAccounts": "No accounts found. Add your first account!",
+  "noTransactions": "No transactions found.",
+  "searchPlaceholder": "Search...",
+  "filterBy": "Filter By",
+  "sortBy": "Sort By",
+  "date": "Date",
+  "name": "Name",
+  "balance": "Balance",
+  "recent": "Recent",
+  "oldest": "Oldest",
+  "recentAccounts": "Recent Accounts",
+  "noDescription": "No description",
+  "net": "Net",
+  "exchangeRates": "Exchange Rates",
+  "dataManagement": "Data Management",
+  "resetAllData": "Reset All Data",
+  "updating": "Updating...",
+  "fetchingRates": "Fetching latest exchange rates",
+  "ratesUpdated": "Exchange rates updated successfully",
+  "updateFailed": "Failed to update exchange rates",
+  "resetConfirm": "This will permanently delete all accounts, transactions, and settings. This action cannot be undone.",
+  "allDataReset": "All data has been reset",
+  "resetFailed": "Failed to reset data",
+  "success": "Success",
+  "enterAccountName": "Enter account name",
+  "optionalDescription": "Optional description",
+  "createCustomCurrency": "Create a custom currency by providing the currency code, name, symbol, and exchange rate to USD.",
+  "currencyCodeHelper": "3 letter currency code",
+  "bitcoinExample": "e.g., Bitcoin, Ethereum",
+  "symbolExample": "e.g., ₿, Ξ, ₹",
+  "rateExample": "e.g., 45000.00",
+  "rateHelper": "How much 1 USD equals in your currency",
+  "exampleTitle": "Example:",
+  "exampleText": "Code: BTC\nName: Bitcoin\nSymbol: ₿\nRate: 0.000025 (if 1 USD = 0.000025 BTC)",
+  "languageChanged": "Language Changed",
+  "restartRequired": "Please restart the app to apply the layout changes for the new language.",
+  "error": "Error",
+  "pleaseEnterAccountName": "Please enter an account name",
+  "pleaseSelectCurrency": "Please select a currency",
+  "accountUpdated": "Account updated successfully",
+  "accountCreated": "Account created successfully",
+  "accountActionFailed": "Failed to {action} account",
+  "update": "update",
+  "create": "create",
+  "pleaseSelectAccount": "Please select an account",
+  "pleaseEnterDescription": "Please enter a description",
+  "pleaseEnterPersonName": "Please enter a person or company name",
+  "pleaseEnterValidAmount": "Please enter a valid amount",
+  "transactionUpdated": "Transaction updated successfully",
+  "transactionAdded": "Transaction added successfully",
+  "transactionActionFailed": "Failed to {action} transaction",
+  "amountPlaceholder": "0.00",
+  "transactionDescriptionPlaceholder": "What is this transaction for?",
+  "fillAllFields": "Please fill in all fields",
+  "currencyCodeInvalid": "Currency code must be exactly 3 letters (e.g., USD, EUR)",
+  "validExchangeRate": "Please enter a valid exchange rate",
+  "about": "About",
+  "appDescription": "Personal debt and credit tracking app",
+  "version": "Version",
+  "developer": "Developer",
+  "sourceCode": "Source Code",
+  "privacy": "プライバシー",
+  "privacyDescription": "あなたのデータはあなたのデバイスにとどまります",
+  "footerDescription": "LedgerWellは、マルチ通貨サポートと完全なプライバシーで借金とクレジットを追跡するのに役立ちます。",
+  "copyrightText": "© 2025 Sepehr Mohammady. MITライセンスの下でオープンソース。",
+  "currencyExists": "Currency {code} already exists",
+  "customCurrencyAdded": "Custom currency {code} added successfully",
+  "customCurrencyFailed": "Failed to add custom currency",
+  "currencyCodePlaceholder": "e.g., BTC, ETH",
+  "currencyNamePlaceholder": "e.g., Bitcoin, Ethereum",
+  "personName": "Person/Company Name",
+  "personNamePlaceholder": "Who owes or is owed money?",
+  "transactionDescription": "Additional Notes",
+  "transactionDescriptionOptional": "Optional additional details",
+  "manageCustomCurrencies": "Manage Custom Currencies",
+  "createCustomCurrencyButton": "Create Custom Currency",
+  "customCurrencyDeleted": "Custom currency deleted successfully",
+  "account": "Account",
+  "confirmReset": "Are you sure you want to reset all data?",
+  "customCurrencyExample": "For example: Bitcoin (BTC)",
+  "noAccountsFound": "No accounts found",
+  "noTransactionsFound": "No transactions found",
+  "reset": "Reset",
+  "settingsSaveFailed": "Failed to save settings",
+  "totalBalance": "Total Balance"
 }
