--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -1,80 +1,123 @@
 {
-  "dashboard": "仪表板",
-  "accounts": "账户",
-  "transactions": "交易",
-  "settings": "设置",
-  "welcome": "欢迎使用 LedgerWell",
-  "totalOwed": "我欠的总额",
-  "totalOwedToMe": "欠我的总额",
-  "netBalance": "净余额",
-  "addAccount": "添加账户",
-  "addTransaction": "添加交易",
-  "accountName": "账户名称",
-  "description": "描述",
-  "personName": "人员姓名",
-  "personNamePlaceholder": "人员或公司名称",
-  "pleaseEnterPersonName": "请输入人员姓名",
-  "transactionDescription": "交易描述",
-  "transactionDescriptionOptional": "附加详情（可选）",
-  "currency": "货币",
-  "amount": "金额",
-  "type": "类型",
-  "debt": "我欠钱",
-  "credit": "有人欠我钱",
-  "save": "保存",
-  "cancel": "取消",
-  "edit": "编辑",
-  "delete": "删除",
-  "confirm": "确认",
-  "confirmDelete": "您确定要删除此项目吗？",
-  "language": "语言",
-  "theme": "主题",
-  "defaultCurrency": "默认货币",
-  "autoUpdateRates": "自动更新汇率",
-  "darkMode": "深色模式",
-  "customCurrency": "自定义货币",
-  "currencyCode": "货币代码",
-  "currencyName": "货币名称",
-  "currencySymbol": "货币符号",
-  "exchangeRate": "汇率（美元）",
-  "manualRate": "设置手动汇率",
-  "updateRates": "更新汇率",
-  "lastUpdated": "最后更新",
-  "noAccounts": "未找到账户。添加您的第一个账户！",
-  "noTransactions": "未找到交易。",
-  "searchPlaceholder": "搜索...",
-  "filterBy": "筛选",
-  "sortBy": "排序",
-  "date": "日期",
-  "name": "名称",
-  "balance": "余额",
-  "recent": "最近",
-  "oldest": "最旧",
-  "noAccountsFound": "未找到账户",
-  "noTransactionsFound": "未找到交易",
-  "totalBalance": "总余额",
-  "account": "账户",
-  "resetAllData": "重置所有数据",
-  "confirmReset": "您确定吗？此操作将删除所有数据。",
-  "recentAccounts": "最近账户",
-  "noDescription": "无描述",
-  "exchangeRates": "汇率",
-  "dataManagement": "数据管理",
-  "createCustomCurrency": "创建自定义货币",
-  "customCurrencyExample": "例如：比特币 (BTC)",
-  "updating": "更新中...",
-  "fetchingRates": "获取最新汇率",
-  "ratesUpdated": "汇率更新成功",
-  "updateFailed": "汇率更新失败",
-  "settingsSaveFailed": "设置保存失败",
-  "resetConfirm": "这将永久删除所有账户、交易和设置。此操作无法撤销。",
-  "allDataReset": "所有数据已重置",
-  "resetFailed": "数据重置失败",
-  "success": "成功",
-  "reset": "重置",
-  "languageChanged": "语言已更改",
-  "restartRequired": "请重启应用以应用新语言的布局更改。",
-  "manageCustomCurrencies": "管理自定义货币",
-  "createCustomCurrencyButton": "创建自定义货币",
-  "customCurrencyDeleted": "自定义货币删除成功"
+  "dashboard": "Dashboard",
+  "accounts": "Accounts",
+  "transactions": "Transactions",
+  "settings": "Settings",
+  "welcome": "Welcome to LedgerWell",
+  "totalOwed": "Total I Owe",
+  "totalOwedToMe": "Total Owed to Me",
+  "netBalance": "Net Balance",
+  "addAccount": "Add Account",
+  "addTransaction": "Add Transaction",
+  "accountName": "Account Name",
+  "description": "Description",
+  "currency": "Currency",
+  "amount": "Amount",
+  "type": "Type",
+  "debt": "I Owe Money",
+  "credit": "Someone Owes Me",
+  "save": "Save",
+  "cancel": "Cancel",
+  "edit": "Edit",
+  "delete": "Delete",
+  "confirm": "Confirm",
+  "confirmDelete": "Are you sure you want to delete this item?",
+  "language": "Language",
+  "theme": "Theme",
+  "defaultCurrency": "Default Currency",
+  "autoUpdateRates": "Auto Update Exchange Rates",
+  "darkMode": "Dark Mode",
+  "customCurrency": "Custom Currency",
+  "currencyCode": "Currency Code",
+  "currencyName": "Currency Name",
+  "currencySymbol": "Currency Symbol",
+  "exchangeRate": "Exchange Rate (to USD)",
+  "manualRate": "Set Manual Rate",
+  "updateRates": "Update Exchange Rates",
+  "lastUpdated": "Last Updated",
+  "noAccounts": "No accounts found. Add your first account!",
+  "noTransactions": "No transactions found.",
+  "searchPlaceholder": "Search...",
+  "filterBy": "Filter By",
+  "sortBy": "Sort By",
+  "date": "Date",
+  "name": "Name",
+  "balance": "Balance",
+  "recent": "Recent",
+  "oldest": "Oldest",
+  "recentAccounts": "Recent Accounts",
+  "noDescription": "No description",
+  "net": "Net",
+  "exchangeRates": "Exchange Rates",
+  "dataManagement": "Data Management",
+  "resetAllData": "Reset All Data",
+  "updating": "Updating...",
+  "fetchingRates": "Fetching latest exchange rates",
+  "ratesUpdated": "Exchange rates updated successfully",
+  "updateFailed": "Failed to update exchange rates",
+  "resetConfirm": "This will permanently delete all accounts, transactions, and settings. This action cannot be undone.",
+  "allDataReset": "All data has been reset",
+  "resetFailed": "Failed to reset data",
+  "success": "Success",
+  "enterAccountName": "Enter account name",
+  "optionalDescription": "Optional description",
+  "createCustomCurrency": "Create a custom currency by providing the currency code, name, symbol, and exchange rate to USD.",
+  "currencyCodeHelper": "3 letter currency code",
+  "bitcoinExample": "e.g., Bitcoin, Ethereum",
+  "symbolExample": "e.g., ₿, Ξ, ₹",
+  "rateExample": "e.g., 45000.00",
+  "rateHelper": "How much 1 USD equals in your currency",
+  "exampleTitle": "Example:",
+  "exampleText": "Code: BTC\nName: Bitcoin\nSymbol: ₿\nRate: 0.000025 (if 1 USD = 0.000025 BTC)",
+  "languageChanged": "Language Changed",
+  "restartRequired": "Please restart the app to apply the layout changes for the new language.",
+  "error": "Error",
+  "pleaseEnterAccountName": "Please enter an account name",
+  "pleaseSelectCurrency": "Please select a currency",
+  "accountUpdated": "Account updated successfully",
+  "accountCreated": "Account created successfully",
+  "accountActionFailed": "Failed to {action} account",
+  "update": "update",
+  "create": "create",
+  "pleaseSelectAccount": "Please select an account",
+  "pleaseEnterDescription": "Please enter a description",
+  "pleaseEnterPersonName": "Please enter a person or company name",
+  "pleaseEnterValidAmount": "Please enter a valid amount",
+  "transactionUpdated": "Transaction updated successfully",
+  "transactionAdded": "Transaction added successfully",
+  "transactionActionFailed": "Failed to {action} transaction",
+  "amountPlaceholder": "0.00",
+  "transactionDescriptionPlaceholder": "What is this transaction for?",
+  "fillAllFields": "Please fill in all fields",
+  "currencyCodeInvalid": "Currency code must be exactly 3 letters (e.g., USD, EUR)",
+  "validExchangeRate": "Please enter a valid exchange rate",
+  "about": "About",
+  "appDescription": "Personal debt and credit tracking app",
+  "version": "Version",
+  "developer": "Developer",
+  "sourceCode": "Source Code",
+  "privacy": "隐私",
+  "privacyDescription": "您的数据保留在您的设备上",
+  "footerDescription": "LedgerWell 帮助您跟踪债务和信贷，具有多货币支持和完整隐私。",
+  "copyrightText": "© 2025 Sepehr Mohammady. MIT 许可证下的开源软件。",
+  "currencyExists": "Currency {code} already exists",
+  "customCurrencyAdded": "Custom currency {code} added successfully",
+  "customCurrencyFailed": "Failed to add custom currency",
+  "currencyCodePlaceholder": "e.g., BTC, ETH",
+  "currencyNamePlaceholder": "e.g., Bitcoin, Ethereum",
+  "personName": "Person/Company Name",
+  "personNamePlaceholder": "Who owes or is owed money?",
+  "transactionDescription": "Additional Notes",
+  "transactionDescriptionOptional": "Optional additional details",
+  "manageCustomCurrencies": "Manage Custom Currencies",
+  "createCustomCurrencyButton": "Create Custom Currency",
+  "customCurrencyDeleted": "Custom currency deleted successfully",
+  "account": "Account",
+  "confirmReset": "Are you sure you want to reset all data?",
+  "customCurrencyExample": "For example: Bitcoin (BTC)",
+  "noAccountsFound": "No accounts found",
+  "noTransactionsFound": "No transactions found",
+  "reset": "Reset",
+  "settingsSaveFailed": "Failed to save settings",
+  "totalBalance": "Total Balance"
 }
